ranger uses "feh --zoom fill" for images

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -1,6 +1,8 @@
 # vim: ft=cfg
-ext jpg = feh --image-bg black --scale-down --borderless "$@"
-ext jpeg = feh --image-bg black --scale-down --borderless "$@"
+ext jpg = feh --zoom fill --scale-down --borderless "$@"
+ext jpeg = feh --zoom fill --scale-down --borderless "$@"
+ext png = feh --zoom fill --scale-down --borderless "$@"
+
 #
 # This is the configuration file of "rifle", ranger's file executor/opener.
 # Each line consists of conditions and a command.  For each line the conditions
