ranger config + fonts + wallpaper

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -131,7 +131,7 @@ set autoupdate_cumulative_size false
 set show_cursor false
 
 # One of: size, basename, mtime, type
-set sort natural
+set sort mtime
 
 # Additional sorting options
 set sort_reverse false
@@ -507,5 +507,6 @@ tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 
 #Background
-map bg shell cp %f /home/panchi/.i3/wallpaper.jpg && i3-msg restart
+map bg shell feh --bg-fill %f
+map bG shell cp %f /home/panchi/.i3/wallpaper.jpg && i3-msg restart
 
