--- a/.i3/config
+++ b/.i3/config
@@ -56,10 +56,10 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+ntilde move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -214,6 +214,12 @@ mode "resize" {
         bindsym Up resize shrink height 10 px or 10 ppt
         bindsym Right resize grow width 10 px or 10 ppt
 
+        #Move window
+        bindsym $mod+Shift+Left move left
+        bindsym $mod+Shift+Down move down
+        bindsym $mod+Shift+Up move up
+        bindsym $mod+Shift+Right move right
+
         # back to normal: Enter or Escape
         bindsym Return mode "default"
         bindsym Escape mode "default"
@@ -229,6 +235,9 @@ bindsym $mod+r mode "resize"
 
 # Hybrid colors 
 # Le mando con gpick
+#https://www.canva.com/color-palette/
+#http://www.palettefx.com/
+
 set $black      #002B36
 set $white      #ffffff
 set $gray       #5C5850
@@ -245,7 +254,7 @@ set $yellow     #E1C61A
 set $pink       #DA496A
 
 set $bg #0a162b
-set $fg #cf702f
+set $fg #cc4455
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -302,7 +311,8 @@ bindsym XF86AudioPrev exec playerctl previous
 #exec --no-startup-id xset s noblank
 #exec --no-startup-id xset dpms 130 130 240
 exec --no-startup-id xset s off
-exec --no-startup-id xautolock -time 5 -locker "~/.i3/lock.sh ~/.i3/lock.png"
+exec --no-startup-id xautolock -time 30 -locker "~/.i3/lock.sh ~/.i3/lock.png"
+exec --no-startup-id xset -dpms
 
 bindsym $mod+l exec "~/.i3/lock.sh ~/.i3/lock.png"
 #https://www.reddit.com/r/unixporn/comments/3358vu/i3lock_unixpornworthy_lock_screen/
