+ i3blocks Spotify artist - song

--- a/.i3/i3blocks.conf
+++ b/.i3/i3blocks.conf
@@ -44,6 +44,11 @@ instance=Master
 interval=once
 signal=10
 
+[mediaplayer]
+command=$HOME/.i3/scripts/mediaplayer 
+instance=spotify
+interval=1
+signal=10 
 
 ##  [spotify simbolito]
 ##  full_text= 
@@ -87,17 +92,4 @@ label=
 command=date "+%H:%M"
 interval=1 
 label=
-
-
-[mediaplayer]
-command=$HOME/.i3/scripts-i3blocks/mediaplayer
-instance=spotify
-interval=5
-signal=10 
-
-# [spotify]
-# label=
-# command=$HOME/.i3/scripts/spotify.py
-# color=#81b71a
-# interval=5
 
