--- a/.i3/config
+++ b/.i3/config
@@ -37,8 +37,9 @@ bindsym $mod+Shift+Return exec xterm -e ranger $HOME/Imágenes/Wallpapers
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
+exec_always xrdb ~/.Xresources
+#bindsym $mod+d exec --no-startup-id rofi -show run -display-run -bg "#223344" -fg "#cc5544" -hlbg "#cc5544" -hlfg "#eeccaa" -hide-scrollbar -font "SFNS Display Regular 13"
+bindsym $mod+d exec rofi -show run -display-run
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
