ranger open video with mpv + br=set random wallpaper + tilda position

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -509,4 +509,4 @@ copytmap <ESC> q Q w <C-c>
 #Background
 map bg shell feh --bg-fill %f
 map bG shell cp %f /home/panchi/.i3/wallpaper.jpg && i3-msg restart
-
+map br shell feh --randomize --bg-fill %d
