--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -2,6 +2,11 @@
 ext jpg = feh --zoom fill --scale-down --borderless "$@"
 ext jpeg = feh --zoom fill --scale-down --borderless "$@"
 ext png = feh --zoom fill --scale-down --borderless "$@"
+ext gif = mpv "$@"
+ext avi = mpv "$@"
+ext mp4 = mpv "$@"
+ext webm = mpv "$@"
+ext txt = subl "$@"
 
 #
 # This is the configuration file of "rifle", ranger's file executor/opener.
