--- a/.i3/config
+++ b/.i3/config
@@ -94,16 +94,16 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
-set $workspace1 "1:"
-set $workspace2 "2:"
-set $workspace3 "3:"
-set $workspace4 "4:♫"
-set $workspace5 "5:"
-set $workspace6 "6" 
-set $workspace7 "7"
-set $workspace8 "8"
-set $workspace9 "9"
-set $workspace10 "10:" 
+set $workspace1 1
+set $workspace2 2
+set $workspace3 3
+set $workspace4 4
+set $workspace5 5
+set $workspace6 6 
+set $workspace7 7
+set $workspace8 8
+set $workspace9 9
+set $workspace10 "10" 
 
 #Link https://github.com/FortAwesome/Font-Awesome
 
@@ -258,27 +258,29 @@ set $pink       #DA496A
 set $bg #0a162b
 set $fg #cc4455
 
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-    id bar-0
-    #tray_output none 
-    position bottom
-    status_command i3blocks -c $HOME/.i3/i3blocks.conf
-    strip_workspace_numbers yes
-
-    colors {
-        background $bg
-        statusline $white
-        separator  $gray
-
-    # workspace indicators border       backgr          text
-        focused_workspace  $bg          $bg             $fg
-        active_workspace   $white       $dark           $dark   #no se que es
-        inactive_workspace $bg          $bg             $white  
-        urgent_workspace   $fg          $fg             $bg
-    }
-}
+#bar {
+#    id bar-0
+#    #tray_output none 
+#    position bottom
+#    status_command i3blocks -c $HOME/.i3/i3blocks.conf
+#    strip_workspace_numbers yes
+#
+#    colors {
+#        background $bg
+#        statusline $white
+#        separator  $gray
+#
+#    # workspace indicators border       backgr          text
+#        focused_workspace  $bg          $bg             $fg
+#        active_workspace   $white       $dark           $dark   #no se que es
+#        inactive_workspace $bg          $bg             $white  
+#        urgent_workspace   $fg          $fg             $bg
+#    }
+#}
 
 # config colors
 #class                  border  backgr. text    indicator
