--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -194,7 +194,7 @@ map cd console cd
 # Tagging / Marking
 map t       tag_toggle
 map ut      tag_remove
-map "<any>  tag_toggle tag=%any
+map <any>  tag_toggle tag=%any
 map <Space> mark_files toggle=True
 map v       mark_files all=True toggle=True
 map uv      mark_files all=True val=False
@@ -508,5 +508,5 @@ copytmap <ESC> q Q w <C-c>
 
 #Background
 map bg shell feh --bg-fill %f
-map bG shell cp %f /home/panchi/.i3/wallpaper.jpg && i3-msg restart
+map bG shell cp %f $HOME/.config/i3/wallpaper.jpg && i3-msg restart
 map br shell feh --randomize --bg-fill %d
