--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -44,11 +44,11 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = "Overpass Regular:pixelsize=11;0"
-font-1 = FontAwesome:size=11;1
-font-2 = siji:pixelsize=10;1
+font-0 = "Overpass Regular:pixelsize=8.5;1"
+font-1 = FontAwesome:size=11;2
+font-2 = "Wuncon Siji:pixelsize=10;1"
 font-3 = dejavusans:pixelsize=10;1
-font-4 = FontAwesome:size=8;1
+font-4 = FontAwesome:size=11;1
 
 ;font-0 = NotoSans-Regular:size=8;0
 ;font-1 = unifont:size=6;-3
@@ -140,7 +140,7 @@ ws-icon-1 = 2;
 ws-icon-2 = 3;
 ws-icon-3 = 4;
 ws-icon-4 = 5;
-ws-icon-5 = 6;6
+ws-icon-5 = 6;
 ws-icon-6 = 7;7
 ws-icon-7 = 8;8
 ws-icon-8 = 9;9
