Compton purple shadows

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -73,9 +73,9 @@ shadow-offset-y = -5;
 shadow-opacity = 0.5;
 
 # Set if you want different colour shadows
-# shadow-red = 0.0;
-# shadow-green = 0.0;
-# shadow-blue = 0.0;
+shadow-red = 0.8;
+shadow-green = 0.02;
+shadow-blue = 0.36;
 
 # The shadow exclude options are helpful if you have shadows enabled. Due to the way compton draws its shadows, certain applications will have visual glitches
 # (most applications are fine, only apps that do weird things with xshapes or argb are affected).
