--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -15,7 +15,7 @@ background-alt = #444
 foreground-alt = #55
 primary = #333
 secondary = #e60053
-alert = #bd2c40 
+alert = #bd2c40
 
 red = #f0696f
 pink = #cc3344
@@ -66,7 +66,7 @@ font-4 = FontAwesome:size=11;1
 ;font-5 = Termsynu:size=8:antialias=false;0
 
 modules-left = i3 xwindow
-modules-center = music  
+modules-center = music
 modules-right = volume cpu date date2 powermenu
 
 tray-position = right
@@ -149,9 +149,9 @@ ws-icon-2 = 3;
 ws-icon-3 = 4;
 ws-icon-4 = 5;
 ws-icon-5 = 6;
-ws-icon-6 = 7;7
-ws-icon-7 = 8;8
-ws-icon-8 = 9;9
+ws-icon-6 = 7;
+ws-icon-7 = 8;
+ws-icon-8 = 9;
 ws-icon-9 = 10;
 
 ; Available tokens:
@@ -234,7 +234,7 @@ toggle-off-foreground = #66
 type = internal/xbacklight
 
 format-prefix = " "
-format = <label> <bar> 
+format = <label> <bar>
 ;agregar <ramp> cuando este en manjaro
 
 label = %percentage%%
@@ -322,7 +322,7 @@ date-alt = %A, %d %B %Y
 time = %H:%M
 time-alt = %H:%M:%S
 
-format-prefix = "%{T2} %{T-} " 
+format-prefix = "%{T2} %{T-} "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #9f78e1
 
@@ -338,14 +338,14 @@ date-alt = " %Y-%m-%d"
 time = %H:%M
 time-alt = %H:%M:%S
 
-format-prefix = " " 
+format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #0a6cf5
 
 label = %time%
 
 [module/volume]
-type = internal/volume
+type = internal/pulseaudio
 
 format-volume = <ramp-volume> <label-volume> <bar-volume>
 label-volume = %percentage%%
