change compton to tryone144 compton and added blur

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -117,19 +117,32 @@ frame-opacity = 1;
 inactive-opacity-override = false;
 alpha-step = 0.06;
 
+opacity-rule = [ 
+    "82:class_g = 'Termite'", 
+    "80:class_g = 'Thunar'", 
+    "60:class_g = 'Rofi'", 
+    "100:class_g = 'Polybar'",
+    "90:class_g = 'Sublime_text'",
+
+];
+
 # Dim inactive windows. (0.0 - 1.0)
 # inactive-dim = 0.2;
 # Do not let dimness adjust based on window opacity.
 # inactive-dim-fixed = true;
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
-# blur-background = true;
+blur-background = true;
+blur-method = "kawase";
+blur-strength = 10;
 # Blur background of opaque windows with transparent frames as well.
 # blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
 blur-background-fixed = false;
 blur-background-exclude = [
     "window_type = 'dock'",
-    "window_type = 'desktop'"
+    "window_type = 'desktop'",
+	"class_g = 'Tilda'",
+	"class_g = 'Xfce4-screenshooter'"
 ];
 
 #################################
@@ -141,7 +154,7 @@ blur-background-exclude = [
 # Fade windows during opacity changes.
 fading = true;
 # The time between steps in a fade in milliseconds. (default 10).
-fade-delta = 4;
+fade-delta = 6;
 # Opacity change between steps while fading in. (default 0.028).
 fade-in-step = 0.03;
 # Opacity change between steps while fading out. (default 0.03).
