--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -67,8 +67,8 @@ font-5 = Symbola:size=11;2
 ;font-5 = Termsynu:size=8:antialias=false;0
 
 modules-left = i3 xwindow
-modules-center = music
-modules-right = volume cpu date date2 powermenu
+modules-center = music battery
+modules-right = xbacklight volume cpu date date2 powermenu
 
 tray-position = right
 tray-detached = false
@@ -362,7 +362,7 @@ label-volume-foreground = ${root.foreground}
 
 ; Available tokens:
 ;   %percentage% (default)
-label-muted =  muted
+label-muted = 🔇 Muted
 label-muted-foreground = #66
 
 ; Only applies if <ramp-volume> is used
@@ -396,32 +396,36 @@ bar-volume-empty-foreground = ${colors.foreground-alt}
 type = internal/battery
 battery = BAT1
 adapter = ADP1
-full-at = 98
+full-at = 94
+label-full =
 
 time-format = %H:%M
 
 label-discharging = Discharging %percentage%% %time%
 
-
-format-charging = <animation-charging> <label-charging> %time%
+format-charging = <label-charging> <animation-charging>
 format-charging-underline = #ffb52a
 
 format-discharging = <ramp-capacity> <label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
 
-format-full-prefix = " "
-format-full-prefix-foreground = ${colors.foreground-alt}
-format-full-underline = ${self.format-charging-underline}
+; Only applies if <ramp-capacity> is used
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-foreground = ${colors.foreground-alt}
+; Only applies if <bar-capacity> is used
+bar-capacity-width = 10
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-foreground = ${colors.foreground-alt}
+; Only applies if <animation-charging> is used
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+; Framerate in milliseconds
 animation-charging-framerate = 750
 
 [module/temperature]
@@ -475,21 +479,16 @@ menu-2-1-exec = menu-open-0
 
 ; vim:ft=dosini
 
-[module/spotify]
-type = custom/script
-exec = ~/.config/polybar/spotify
-interval = 2
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
 
 [module/music]
 type = custom/script
-interval = 2
+interval = 1
 
-label = %output:0:75:...%
-exec = ~/.config/polybar/mpris.sh
+tail = true
+label = %output:0:45:...%
+exec = ~/.config/polybar/mpris-colors.sh
 click-left = playerctl previous
 click-middle = playerctl play-pause
 click-right = playerctl next
 
-label-font = 2
+;label-font = 2
